@@ -314,7 +314,7 @@ void MagicWandTool::flushPending()
 			m_pendingImage.height(), m_pendingImage);
 		if(!msgs.isEmpty()) {
 			msgs.prepend(net::makeUndoPointMessage(contextId));
-			client->sendMessages(msgs.size(), msgs.constData());
+			client->sendCommands(msgs.size(), msgs.constData());
 		}
 		disposePending();
 	}
